--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,3 +2,91 @@
     margin:0;
     padding:0;
 }
+
+.header{
+    position:absolute;
+    margin:0 auto;
+    width:100%;
+}
+
+
+.nav{
+    display:grid;
+    grid-template-columns:20% 80%; 
+    width:inherit;
+    
+
+}
+
+.nav__brand-logo{
+    display:block;
+    width:100px;
+}
+
+.nav__menu{
+    width:100%;
+    list-style: none;
+    display:flex;
+    align-items: space-between;
+}
+.nav__menu-item{
+
+}
+.nav__menu-item a{
+    text-decoration: none;
+    color:white;
+}
+.main{
+
+}
+
+.hero{
+    width:100%;
+    height:100vh;
+}
+
+.hero__video{
+    display:absolute;
+    width:inherit;
+    height:inherit;
+    object-fit:cover;
+}
+
+.hero__text-container{
+    position:absolute;
+    color:white;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:inherit;
+    height:inherit;
+}
+
+.hero__header{
+
+}
+
+.hero__sub-header{
+
+}
+
+.text-and-image__row{
+
+}
+
+.text-and-image__column{
+
+}
+
+.text-and-image__content{
+
+}
+
+.text-and-image__image{
+
+}
+
+.footer{
+
+}
