--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,178 +1,184 @@
 @import url('https://fonts.googleapis.com/css2?family=Dhurjati&family=Nova+Square&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-    --white: rgb(255, 255, 255, 1);
-    --white-transparent: rgb(255, 255, 255, 0.4);
-    --black: rgb(0, 0, 0, 1);
+    	--white: rgb(255, 255, 255, 1);
+    	--white-transparent: rgb(255, 255, 255, .4);
+    	--black: rgb(0, 0, 0, 1);
 
-    --white-logo: url("../img/logo/bonz.ai-logo-white-symbol.png");
-    --black-logo: url("../img/logo/bonz.ai-logo-black-symbol.png");
+    	--white-logo: url("../img/logo/bonz.ai-logo-white-symbol.png");
+    	--black-logo: url("../img/logo/bonz.ai-logo-black-symbol.png");
+
+	--regular-content-img: url("../img/photos/02-day.jpg");
+	--hovering-content-img: url("../img/photos/02-night.jpg");
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration:none;
-    color:var(--black);
+    	margin: 0;
+    	padding: 0;
+    	text-decoration:none;
+    	color:var(--black);
 
 }
 
 html {
-    font-size: 100%;
-    max-width:100%;
-    background:var(--white);
+
+    	max-width:100%;
+}
+
+body{
+    	font-family: 'Nova Square', sans-serif;
+    	font-size: 100%;
 }
 
 .header {
-    position:fixed;
-    margin: 0 auto;
-    width: 100%;
-    z-index: 10;
-    transition: all 0.25s;
-    color: var(--white);
+    	position:fixed;
+    	margin: 0 auto;
+    	width: 100%;
+    	z-index: 10;
+    	transition: all 0.25s;
+    	color: var(--white);
 }
 
 .header:hover {
-    background-color: var(--white-transparent);
+    	background-color: var(--white);
 
 }
 
 
 .nav {
-    display: grid;
-    grid-template-columns: auto 600px;
-    width: 90%;
-    margin: 2rem auto;
-    z-index: 2;
+    	display: grid;
+    	grid-template-columns: auto 600px;
+    	width: 90%;
+    	margin: 2rem auto;
+    	z-index: 2;
 
 }
 
 
 .nav__brand-logo {
-    display: block;
-    width: 100px;
-    height: 100px;
-    background-image: var(--white-logo);
-    transition: all .4s;
-    background-size: contain;
+    	display: block;
+    	width: 100px;
+    	height: 100px;
+    	background-image: var(--white-logo);
+    	transition: all .4s;
+    	background-size: contain;
 }
 
 .header:hover .nav__brand-logo {
-    background-image: var(--black-logo);
-    transform:rotate(45deg) scale(1.4);
+    	background-image: var(--black-logo);
+    	transform:rotate(45deg) scale(1.4);
 
 }
 
 
 .nav__menu {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    	list-style: none;
+    	display: flex;
+    	justify-content: space-between;
+    	align-items: center;
 }
 
 .nav__menu-item {
-    font-family: 'Dhurjati', sans-serif;
-    font-size: 2rem;
-    cursor: pointer;
-    margin: auto;
-    transition: all 0.2s;
+    	font-family: 'Dhurjati', sans-serif;
+    	font-size: 2rem;
+    	cursor: pointer;
+    	margin: auto;
+    	transition: all 0.2s;
 }
 
 .nav__menu-item:hover {
-    transform: scale(1.2);
+    	transform: scale(1.2);
 }
 
 .nav__menu-item>a {
-    text-decoration: none;
-    color: var(--white);
+    	text-decoration: none;
+    	color: var(--white);
 
-    transition: inherit;
+    	transition: inherit;
 }
 
 .header:hover .nav__menu-item a {
-    color: var(--black);
+    	color: var(--black);
     
 }
 
 .main {
-    display:flex;
-    flex-direction:column;
-    row-gap: 15vh;
+    	display:flex;
+    	flex-direction:column;
+    	row-gap: 15vh;
 }
 
 .hero {
-    width: 100%;
-    height: 100vh;
+    	width: 100%;
+    	height: 100vh;
 }
 
 
 .hero__content-container {
-    position: absolute;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    width:90vw;
-    margin:auto auto 0 auto;
-    padding: 15rem 0 0 5vw;
+    	position: absolute;
+    	color: white;
+    	display: flex;
+    	flex-direction: column;
+    	width:90vw;
+    	margin:auto auto 0 auto;
+    	padding: 15rem 0 0 5vw;
 
-    font-family: 'Nova Square', sans-serif;
 
 }
 
 .hero__header {
-    color:inherit;
-    font-size: 4rem;
-    margin-bottom: 5rem;
+    	color:inherit;
+    	font-size: 4rem;
+    	margin-bottom: 5rem;
 }
 
 .hero__sub-header {
-    color:inherit;
+    	color:inherit;
 
-    font-size: 2.2rem;
-    width: 32rem;
-    line-height: 4rem;
+    	font-size: 2.2rem;
+    	width: 32rem;
+    	line-height: 4rem;
 
 }
 
 .hero__angle-down-section {
 
-    margin: 5rem auto 0;
+    	margin: 5rem auto 0;
     
-    transform: scaleY(0.5);
+    	transform: scaleY(0.5);
 }
 
 .hero__angle-down-icon {
-    display: block;
-    width: 8rem;
-    height: 8rem;
-    border-bottom-right-radius:10px;
-    border: 10px solid var(--white-transparent);
-    border-left-style: none;
-    border-top-style: none;
-    transform:rotate(45deg);
+    	display: block;
+    	width: 8rem;
+    	height: 8rem;
+    	border-bottom-right-radius:10px;
+    	border: 10px solid var(--white-transparent);
+    	border-left-style: none;
+	border-top-style: none;
+	transform:rotate(45deg);
 }
 .hero__angle-down-icon:nth-child(2) {
-    transform: rotate(45deg) translate(-80px, -80px);
+	transform: rotate(45deg) translate(-80px, -80px);
 }
 
 .hero__video {
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-    z-index: -10;
+   	position: absolute;
+   	width: inherit;
+    	height: inherit;
+    	object-fit: cover;
+    	z-index: -10;
 }
 .text-and-image__row,
 .text-and-image__column {
-    max-width:1000px;
-    display: grid;
-    justify-content: center;
-    column-gap: 5vw;
-    margin:auto;
+   	max-width:1000px;
+   	display: grid;
+    	justify-content: center;
+	column-gap: 5vw;
+	margin:auto;
 }
 .text-and-image__row{
-    grid-template-columns: 50% 50%;
+	grid-template-columns: 50% 50%;
 
 }
 
@@ -182,31 +188,43 @@ html {
 }
 
 .text-and-image__content-section {
-    padding:2rem;
+	padding:1.5rem;
 
-    font-family: 'Oswald', sans-serif;
-    font-weight:300;
-    font-size:2rem;
+	font-family: 'Oswald', sans-serif;
+	font-weight:300;
+	font-size:2rem;
+}
+
+.text-and-image__content-header{
+	margin-bottom:2rem;
+}
+
+.text-and-image__content-sub-header{
+	margin-bottom:2rem;
 }
 
 .text-and-image__content-section a {
-    display:block;
-    font-weight:400;
-    text-align: center;
-    padding:2rem;
-    transition: all 0.25s;
-}
-.text-and-image__content-section a:hover {
-    color:blueviolet;
-    transform:scale(1.1);
-}
-.text-and-image__image-section img{
-    width:100%;
-    height:auto;
-    transition: all 0.5s;
-}
-.text-and-image__image-section img:hover{
-    transform:scale(1.2);
+	display:block;
+	font-weight:400;
+	text-align: center;
+	padding:2rem;
+	transition: all 0.25s;
 }
 
-.footer {}
+.text-and-image__content-section a:hover {
+	color:blueviolet;
+	transform:scale(1.1);
+}
+.text-and-image__image-section{
+	background-image: var(--regular-content-img);
+	width:100%;
+	height:auto;
+	opacity:1;
+	transition: all .4s;
+}
+
+
+.footer {
+	height:20vh;
+	
+}
