--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Dhurjati&family=Nova+Square&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dhurjati&family=Maven+Pro:wght@400;500;600;700;800&family=Nova+Square&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 
 :root {
-	--white: rgb(255, 255, 255, 1);
+	--white: rgb(252, 250, 255, 1);
+	--white-more-transparent: rgb(255, 255, 255, .2);
 	--white-transparent: rgb(255, 255, 255, .4);
+	--white-less-transparent: rgb(255, 255, 255, .7);
 	--black: rgb(0, 0, 0, 1);
+	--black-transparent: rgb(0, 0, 0, .7);
+	--black-more-transparent: rgb(0, 0, 0, .3);
+	--lightblue-color: rgb(152, 242, 215, 1);
 
-	--primary-color: rgb(152, 242, 215, 1);
+	--background-image: url("../img/photos/pexels-eberhard-grossgasteiger-534164.jpg");
 
 	--logo-white: url("../img/logo/bonz.ai-logo-white-symbol.png");
 	--logo-black: url("../img/logo/bonz.ai-logo-black-symbol.png");
-	--logo-color: url("../img/logo/bonz.ai-logo-color-symbol.png")
-	--logo-landscape-white: url("../img/logo/bonz.ai-logo-white-landscape.png");
+	--logo-color: url("../img/logo/bonz.ai-logo-color-symbol.png") --logo-landscape-white: url("../img/logo/bonz.ai-logo-white-landscape.png");
 	--logo-landscape-black: url("../img/logo/bonz.ai-logo-black-landscape.png");
 	--logo-landscape-color: url("../img/logo/bonz.ai-logo-color-landscape.png");
 	--logo-portrait-white: url("../img/logo/bonz.ai-logo-white-portrait.png");
@@ -20,21 +25,31 @@
 	--logo-portrait-full-black: url("../img/logo/bonz.ai-logo-black-portrait-full.png");
 	--logo-portrait-full-color: url("../img/logo/bonz.ai-logo-color-portrait-full.png");
 
-	
+	--computer-image: url("../img/computer.png");
+
 	--regular-content-img: url("../img/photos/02-day.jpg");
 	--hovering-content-img: url("../img/photos/02-night.jpg");
+
+	--animation-timer: .25s;
+	--animation-logo-timer: .4s;
+
+	--angle-down-size: 8rem;
+	--angle-down-gap: -10.5rem;
+	--header-height: 60px;
 }
 
 * {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
+	list-style: none;
 
 }
 
 html {
-
 	max-width: 100%;
+	scroll-behavior: smooth;
+	transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 body {
@@ -42,121 +57,139 @@ body {
 	background-color: var(--black);
 	color: var(--white);
 	font-size: 100%;
+
 }
 
-.header {
-	position: fixed;
-	margin: 0 auto;
-	width: 100%;
-	z-index: 10;
-	transition: all 0.25s;
+a {
 	color: var(--white);
 }
 
-.header:hover {
-	background-color: var(--white-transparent);
-
+a:hover {
+	color: var(--lightblue-color);
 }
 
-.header--scrolled-down {
+/* Header styling */
+.header {
 	position: fixed;
 	margin: 0 auto;
-	width: 100%;
 	z-index: 10;
-	transition: all 0.25s;
+	transition: all var(--animation-timer);
+	color: var(--white);
+	width: 100vw;
+	min-height: var(--header-height);
+
+}
+
+/* Header hovering */
+.header:hover {
 	background-color: var(--white-transparent);
 }
 
-
-.header--scrolled-down .nav,
+/* Nav menu */
 .nav {
-	display: grid;
-	grid-template-columns: 100px auto;
-	width: inherit;
-	margin: 2rem 4rem;
-	column-gap:20vw;
-	z-index: 2;
-	transition:all 0.25s;
-
-}
-
-.header--scrolled-down .nav{
-	column-gap:40vw;
-
-}
-
-
-.nav__brand-logo {
-	display: block;
-	width: 100px;
-	height: 100px;
-	background-image: var(--white-logo);
-	transition: all .4s;
-	background-size: contain;
-	margin:auto;
-
-}
-
-.header:hover .nav__brand-logo {
-	background-image: var(--black-logo);
-	transform: rotate(45deg) scale(1.2);
-
-}
-
-.header--scrolled-down .nav__brand-logo {
-	background-image: var(--black-logo);
-	height:50px;
-	width:50px;
-}
-
-
-.nav__menu {
-	list-style: none;
+	font-family: 'Dhurjati', sans-serif;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 90%;
+	font-size: 2rem;
+	margin: 2rem 0;
+	min-height: var(--header-height);
+}
+
+.nav__hamburger {
+	display: none;
+
+}
+
+.nav__brand-logo {
+	display: block;
+	min-width: 100px;
+	min-height: 100px;
+	background-image: var(--logo-white);
+	background-size: contain;
+	background-repeat: no-repeat;
+	transition: background-image var(--animation-logo-timer), transform var(--animation-logo-timer), min-width var(--animation-logo-timer), min-height var(--animation-logo-timer);
+	margin-left: 20px;
+
+}
+
+
+
+@media (min-width:1000px) {
+
+	.header--scrolled-up:hover .nav__brand-logo {
+		background-image: var(--logo-black);
+		transform: rotate(45deg) scale(1.2);
+	}
+}
+
+
+
+.nav__menu {
+	grid-column-start: 3;
+	list-style: none;
+	display: flex;
+	width: 70%;
 }
 
 .nav__menu-item {
-	font-family: 'Dhurjati', sans-serif;
-	font-size: 2rem;
+
 	cursor: pointer;
 	margin: auto;
-	transition: all 0.2s;
+	transition: all 0.25s;
 }
 
 .nav__menu-item:hover {
 	transform: scale(1.2);
 }
 
-.nav__menu-item>a {
-	text-decoration: none;
+.nav__menu-item a {
 	color: var(--background-color);
 
-	transition: inherit;
 }
 
-.header--scrolled-down .nav__menu-item a,
 .header:hover .nav__menu-item a {
 	color: var(--black);
 
 }
 
-.header--scrolled-down .nav__menu-item a{
-	font-size:1.5rem;
+/* Nav menu when scrolling down the screen */
+.header--scrolled-down {
+	background-color: var(--white-transparent);
+}
+
+.header--scrolled-down .nav {
+	margin: auto 0;
+}
+
+.header--scrolled-down .nav__brand-logo {
+	background-image: var(--logo-black);
+	min-height: 50px;
+	min-width: 50px;
+}
+
+.header--scrolled-down .nav__menu-item a {
+	color: var(--black);
+	font-size: 1.5rem;
 }
 
 
+
+/* Main section */
 .main {
 	display: flex;
 	flex-direction: column;
 	row-gap: 15vh;
+	min-height: 50vh;
 }
 
+/* Hero Section */
 .hero {
 	width: 100%;
 	height: 100vh;
+
+	font-family: 'Maven Pro', sans-serif;
+
 }
 
 
@@ -172,6 +205,7 @@ body {
 }
 
 .hero__header {
+
 	color: inherit;
 	font-size: 4rem;
 	margin-bottom: 5rem;
@@ -180,32 +214,41 @@ body {
 .hero__sub-header {
 	color: inherit;
 
-	font-size: 2.2rem;
-	width: 32rem;
+	font-size: 3rem;
+	width: 680px;
+
 	line-height: 4rem;
 
 }
 
 .hero__angle-down-section {
 
-	margin: 5rem auto 0;
+	margin: 15vh auto 0;
 
 	transform: scaleY(0.5);
 }
 
+.hero__angle-down-section:hover .hero__angle-down-icon {
+	--angle-down-size: 8.5rem;
+	--angle-down-gap: -11rem;
+	border-color: var(--white-less-transparent);
+
+}
+
 .hero__angle-down-icon {
 	display: block;
-	width: 8rem;
-	height: 8rem;
+	width: var(--angle-down-size);
+	height: var(--angle-down-size);
 	border-bottom-right-radius: 10px;
 	border: 10px solid var(--white-transparent);
 	border-left-style: none;
 	border-top-style: none;
 	transform: rotate(45deg);
+	transition: all var(--animation-timer);
 }
 
 .hero__angle-down-icon:nth-child(2) {
-	transform: rotate(45deg) translate(-80px, -80px);
+	transform: translateY(var(--angle-down-gap)) rotate(45deg);
 }
 
 .hero__video {
@@ -216,25 +259,19 @@ body {
 	z-index: -10;
 }
 
-.text-and-image__row,
-.text-and-image__column {
-	width: 1000px;
-	display: grid;
-	justify-content: center;
-	column-gap: 5vw;
-	margin: auto;
-}
-
+/* Text and Image section */
 .text-and-image__row {
-	grid-template-columns: 1fr 1fr;
-
+	display: flex;
+	width: 90vw;
+	margin: auto;
+	padding-top: 10vh;
+	text-align: center;
 }
 
-.text-and-image__column {}
 
 .text-and-image__content-section {
 	padding: 1.5rem;
-
+	width: 50vw;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
 	font-size: 2rem;
@@ -253,15 +290,17 @@ body {
 	font-weight: 400;
 	text-align: center;
 	color: var(--white);
-	padding: 1rem 0;
-	transition: all 0.25s;
+	padding: .5rem 1rem;
+	margin: auto;
+	width: 15rem;
+	transition: transform var(--animation-timer), border var(--animation-timer), color var(--animation-timer);
 	border: solid 1px rgb(0, 0, 0, 0);
 	border-radius: 5px;
 }
 
 .text-and-image__content-section a:hover {
-	color: var(--primary-color);
-	border: 1px solid var(--primary-color);
+	color: var(--lightblue-color);
+	border: 1px solid var(--lightblue-color);
 	transform: scale(1.05);
 }
 
@@ -270,10 +309,9 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	margin: auto;
-	width: 100%;
-	height: 100%;
-	opacity: 1;
+	flex-grow: 1;
+	width: 40vw;
+	height: auto;
 	transition: all .4s;
 }
 
@@ -283,30 +321,409 @@ body {
 
 }
 
-
+/* Footer */
 .footer {
-	display:grid;
-	grid-template-columns:1fr 2fr 1fr;
-	grid-template-rows: 3px auto;
-	margin-top:5vh;
-	height: 20vh;
-	width:100%;
+	font-family: 'Oswald', sans-serif;
+
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 3rem;
 
 }
-.footer .footer__line{
-	grid-column: span 3;
-	display:block;
-	border:solid 2px var(--primary-color);
-	border-radius:10px;
-	width:80vw;
-	margin:0 auto;
+
+.footer__line {
+	display: block;
+	border: solid 2px var(--lightblue-color);
+	border-radius: 10px;
+	width: 80vw;
+	margin: 3rem auto;
 }
 
-.footer__company-logo{
-	
-	background-image: var(--color-logo-landscape);
+
+
+.footer__company-details {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	row-gap: 3rem;
+	width: 90vw;
+	margin: auto;
+
+}
+
+.footer__company-logo {
+	grid-column: span 2;
+	background-image: var(--logo-landscape-color);
 	background-size: contain;
-	width:410px;
-	height:100px;
-	margin: 2rem 0 0 2rem;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: 3rem;
+	height: 15vw;
+}
+
+.footer__company-address-section,
+.footer__company-links-section {
+	margin: auto;
+}
+
+.footer__company-address-header,
+.footer__company-links-header {
+	font-weight: 500;
+	padding: .4rem 0;
+}
+
+.footer__company-links-list-item,
+.footer__address-list-item {
+	font-weight: 300;
+	padding: .4rem 0;
+}
+
+.footer__company-links-list-item a,
+.footer__address-list-item a {
+	transition: color var(--animation-timer);
+}
+
+/* ROOT RESPONSIVE CODE */
+@media(max-width:1000px) {
+
+
+
+	.header,
+	.header--scrolled-down,
+	.header--scrolled-up {
+		background-color: var(--white-transparent);
+
+	}
+
+
+
+
+
+	.nav__brand-logo {
+
+		min-height: 50px;
+		min-width: 50px;
+
+		background-image: var(--logo-black);
+		background-size: contain;
+	}
+
+	.nav__hamburger {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+		gap: 5px;
+		width: 50px;
+		margin-right: 20px;
+	}
+
+	.nav__hamburger::before,
+	.nav__hamburger::after,
+	.nav__hamburger input {
+		content: "";
+		width: 40px;
+		height: 5px;
+		background: var(--black);
+		border-radius: 50px;
+		transition: all var(--animation-timer);
+		transform-origin: center;
+
+	}
+
+	.nav__hamburger input {
+		appearance: none;
+		outline: none;
+		pointer-events: none;
+		transition: transform var(--animation-timer), background var(--animation-timer);
+	}
+
+
+
+	.nav__menu {
+		position: absolute;
+		opacity: 0;
+		right: 0;
+		z-index: -1;
+		flex-direction: column;
+		align-items: flex-start;
+		color: var(--black);
+		width: 100%;
+		background: var(--white);
+		transform: translateY(-215px);
+		transition: transform var(--animation-timer), opacity var(--animation-timer);
+
+	}
+
+	.nav__hamburger input:checked {
+		transform: rotateZ(-315deg);
+
+	}
+
+	.nav__hamburger:has(input:checked)::before {
+		transform: translateY(10px) rotateZ(225deg);
+
+	}
+
+	.nav__hamburger:has(input:checked)::after {
+		transform: translateY(-10px) rotateZ(-225deg);
+
+	}
+
+
+	.nav__hamburger:has(input:checked)+.nav__menu {
+		transform: translateY(200px);
+		opacity: 1;
+	}
+
+	.header:has(.nav .nav__hamburger input:checked) {
+
+		background: var(--white);
+
+	}
+
+	.nav__menu-item {
+		padding: 1rem;
+		transition: all var(--animation-timer);
+	}
+
+	.nav__menu-item a {
+		text-wrap: nowrap;
+	}
+
+	.hero__sub-header {
+		font-size: 5vw;
+		width: 90vw;
+		line-height: 8vw;
+	}
+
+	.hero__angle-down-section {
+
+		margin: 20vh auto 0;
+
+		transform: scaleY(0.4);
+	}
+
+	.text-and-image__row {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		column-gap: 5vw;
+		margin: auto;
+	}
+
+
+	.text-and-image__image-section {
+		flex-grow: 1;
+		width: 60vw;
+		height: 50vw;
+		transition: all .4s;
+	}
+
+
+	.footer__company-logo {
+		grid-column: 1 / span 4;
+		background-image: var(--logo-landscape-color);
+		background-size: contain;
+		background-repeat: no-repeat;
+		max-width: 80vw;
+		width: 500px;
+		margin: auto;
+	}
+
+	.footer__company-address-section,
+	.footer__company-links-section {
+		grid-column: span 2;
+	}
+
+
+
+}
+
+
+/* Classes sharing global code. Mostly for positioning of background image and 
+   putting content under the fixed menu */
+
+/* Background */
+.main__rooms-background,
+.main__booking-background {
+	position: absolute;
+	background-color: var(--black-transparent);
+	background-image: var(--background-image);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-blend-mode: color;
+	filter: blur(8px);
+	width: 100%;
+	height: 140vh;
+
+	z-index: -10
+}
+
+/* Main area of pages */
+
+.main__rooms-section,
+.main__booking-section {
+
+	margin-top: 20vh;
+	min-height: 60vh;
+}
+
+/* BOOKING PAGE */
+
+.main__booking-form {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 5vw;
+	text-align: center;
+	row-gap: 2rem;
+	width: 50rem;
+	margin: auto;
+}
+
+.booking-form__header {
+	grid-column: span 2;
+
+	font-size: 3rem;
+
+}
+
+.booking-form__date-picker,
+.booking-form__number,
+.booking-form__type-of-room,
+.booking-form__search {
+	font-family: 'Oswald', sans-serif;
+	font-size: 2rem;
+	height: 4rem;
+	margin: auto;
+	text-align: center;
+	background: var(--black-transparent);
+	border-color: var(--lightblue-color);
+	border-radius: 0.4rem;
+	color: var(--lightblue-color);
+
+
+}
+
+.main__booking-form .booking-form__date-picker {
+	width: 20rem;
+}
+
+.booking-form__label-header {
+	font-size: 1.5rem;
+
+}
+
+.booking-form__sub-section-label-header {
+	font-size: 2.4rem;
+	font-weight: 600;
+	grid-column: span 2;
+
+}
+
+.booking-form__number {
+	font-weight: bold;
+	width: 5rem;
+	height: 5rem;
+
+}
+
+.booking-form__type-of-room {
+	grid-column: span 2;
+	width: 20rem;
+}
+
+.booking-form__search {
+	width: 20rem;
+	grid-column: span 2;
+	transition: all var(--animation-timer);
+	border-color: rgb(0, 0, 0, 0);
+}
+
+.booking-form__search:hover {
+	background: var(--lightblue-color);
+	color: var(--black);
+	transform: scale(1.05);
+	cursor: pointer;
+}
+
+.main__booking-section hr {
+	margin: 2rem 0;
+}
+
+
+/* SEARCHED ROOMS */
+
+
+.rooms-section__container {
+	font-family: 'Maven Pro', sans-serif;
+
+}
+
+.room {
+	width: 25vw;
+	height: 35vw;
+	border: 1px solid white;
+	background-color: var(--black);
+	overflow: hidden;
+
+}
+
+.room__image {
+	overflow: hidden;
+	height: inherit;
+	/* Magic */
+	display: flex;
+	align-items: center;
+	/* vertical */
+	justify-content: center;
+	/* horizontal */
+	transition: all var(--animation-logo-timer);
+
+}
+
+.room__image img {
+	height: inherit;
+	transition: all var(--animation-logo-timer);
+}
+
+.room__details {
+	top: -2.5rem;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	width: inherit;
+	height: inherit;
+	background-color: var(--black-more-transparent);
+	transition: all var(--animation-logo-timer);
+
+}
+
+.room__header {
+	text-align: center;
+	padding:0.5rem 0;
+}
+
+.room__price {
+	margin:0.5rem 0;
+	font-weight:300;
+}
+
+.room__information {}
+
+.room__accept-button {}
+
+.room:hover .room__image {
+
+	filter: blur(2px) sepia();
+}
+
+.room:hover .room__image img {
+	height: 40vw;
+}
+
+.room:hover .room__details {
+	padding: 1rem 0;
+	top: -35vw;
 }
