--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,6 +252,7 @@ a:hover {
 }
 
 .hero__video {
+    filter:blur(5px);
 	position: absolute;
 	width: inherit;
 	height: inherit;
@@ -262,7 +263,7 @@ a:hover {
 /* Text and Image section */
 .text-and-image__row {
 	display: flex;
-	width: 90vw;
+	width: 1000px;
 	margin: auto;
 	padding-top: 10vh;
 	text-align: center;
@@ -311,6 +312,7 @@ a:hover {
 	background-position: center;
 	flex-grow: 1;
 	width: 40vw;
+    max-width:500px;
 	height: auto;
 	transition: all .4s;
 }
